--- a/main.tex
+++ b/main.tex
@@ -4,65 +4,71 @@
 \usepackage{taylanmacros}
 \usepackage{fourier}
 \usepackage{multicol}
+\chapterstyle{bianchi}
 \usetikzlibrary{shapes.geometric,fit} % used in P-4-functions.tex
 
+\title{Calculus I Lecture Notes}
+\author{Taylan Şengül}
+
+
 \begin{document}
+\maketitle
 \tableofcontents
-\chapter*{Precalculus}
-    \section*{P-0-Sets}
+\chapter{Precalculus}
+    \section{Sets}
     \subfile{src/P-0-sets.tex}
-    \section*{P-1-Real Numbers}
+    \section{Real Numbers}
     \subfile{src/P-1-realnumbers.tex}
-    \section*{P-2-Cartesian Coordinates}
+    \section{Cartesian Coordinates}
     \subfile{src/P-2-cartesian.tex}
-    \section*{P-3-Quadratic Equations}
+    \section{Quadratic Equations}
     \subfile{src/P-3-quadratics.tex}
-    \section*{P-4-Functions and Their Graphs}
+    \section{Functions and Their Graphs}
     \subfile{src/P-4-functions.tex}
-    \section*{P-5-Operations on Functions}
+    \section{Operations on Functions}
     \subfile{src/P-5-operfunctions.tex}
-    \section*{P-6-Polynomials and Rational Functions}
+    \section{Polynomials and Rational Functions}
     \subfile{src/P-6-polys.tex}
-    \section*{P-6-Polynomials and Rational Functions}
-    \subfile{src/P-7-trigs.tex}
-\chapter*{Limits and Continuity}
-    \section*{1.1 Informal definition of limits}
+
+
+\chapter{Limits and Continuity}
+    \section{Informal definition of limits}
     \subfile{src/1-1-limit.tex}
-    \section*{1.2 Formal definition of Limit}
+    \section{Formal definition of Limit}
     \subfile{src/1-5-formal}
-    \section*{1.3 One Sided Limits and Limits at Infinity}
+    \section{One Sided Limits and Limits at Infinity}
     \subfile{src/1-6-limit-variations}
-    \section*{1.4 Properties of limits}
+    \section{Properties of limits}
     \subfile{src/1-2-properties-limits.tex}
-    \section*{1.5 Continuity}
+    \section{Continuity}
     \subfile{src/1-4-continuity}
 
 
-\chapter*{Differentiation}
-    \section*{2.1 Tangent Lines and Their Slopes}
+\chapter{Differentiation}
+    \section{Tangent Lines and Their Slopes}
     \subfile{src/2-1-tangent}
-    \section*{2.2 Derivative}
+    \section{Derivative}
     \subfile{src/2-2-derivative}
-    \section*{2.3 Differentiation Rules}
+    \section{Differentiation Rules}
     \subfile{src/2-3-diffrules}
-    \section*{2.4 Chain Rule}
+    \section{Chain Rule}
     \subfile{src/2-4-chain}
-    \section*{2.5 Derivatives of Trigonometric Functions}
+    \section{Derivatives of Trigonometric Functions}
     \subfile{src/2-5-trig}
-    \section*{2.6 Higher Order Derivatives}
+    \section{Higher Order Derivatives}
     \subfile{src/2-6-higher}
-    \section*{2.8 Mean Value Theorem}
+    \section{Mean Value Theorem}
     \subfile{src/2-8-mean}
-    \section*{2.9 Implicit Differentiation}
+    \section{Implicit Differentiation}
     \subfile{src/2-9-implicit}
-    \section*{2.10 Antiderivatives}
+    \section{Antiderivatives}
     \subfile{src/2-10-antider}
 
-\chapter*{Transcendental Functions}
-    \section*{3.1 Inverse Functions}
+\chapter{Transcendental Functions}
+    \section{Inverse Functions}
     \subfile{src/3-1-inverse}
-    \section*{3.2 Exponential and Logarithmic Functions}
+    \section{Exponential and Logarithmic Functions}
     \subfile{src/3-2-exp}
-    \section*{3.3 The Natural Logarithm and Exponential}
+    \section{The Natural Logarithm and Exponential}
     \subfile{src/3-3-naturallog}
 \end{document}
