--- a/src/P-1-realnumbers.tex
+++ b/src/P-1-realnumbers.tex
@@ -3,7 +3,7 @@
 \begin{document}
 The \textbf{integers} are $\mathbb{Z}= \left\{ \dots, -2, -1, 0,1, 2, \dots \right\}$.
 
-Integers come in a lot varities:
+Integers come in a lot varieties:
 \begin{itemize}
   \item[-] even integers that are of the form $2k$, for some $k\in \mathbb{Z}$,
   \item[-] odd integers that are of the form $2k+1$, for some $k\in \mathbb{Z}$
@@ -48,7 +48,7 @@ The real numbers are ordered such that
 \item $0<a<b$ implies $\frac{1}{b}<\frac{1}{a}$
 \end{enumerate}
 
-\textbf{Intervals}
+\subsection*{Intervals}
 
 The open interval $(a,b) = \{x \mid a < x < b\}$, closed interval $([a,b])$, half open intervals $(a, b]$, $[a, b)$. It is possible that $a=-\infty$, $b=\infty$.
 Draw each interval on the real line.
@@ -70,7 +70,7 @@ Draw each interval on the real line.
   \end{enumerate}
 \end{example}
 
-\textbf{The absolute value.}
+\subsection*{The absolute value.}
 \[
   \abs{x} =
   \begin{cases}
