--- a/taylanmacros.sty
+++ b/taylanmacros.sty
@@ -6,16 +6,20 @@
 \RequirePackage{amsmath}
 \RequirePackage{amsthm}
 \RequirePackage{amsfonts}
+
+\RequirePackage{hyperref}
+
 \RequirePackage{tikz}
 \usetikzlibrary{shadows}
 \usetikzlibrary{shapes}
 \usetikzlibrary{decorations}
+\usetikzlibrary{patterns}
 \tikzset{>=stealth} %% makes all arrows the same
 \colorlet{penColor}{green!50!black} % Color of a curve in a plot
 \colorlet{background}{Apricot!7} % Color of the page
 \colorlet{gridColor}{gray!30} % Color of grid in a plot
 
-\usetikzlibrary{patterns}
+
 \RequirePackage{listings}
 \RequirePackage{cool}
 \RequirePackage[utf8]{inputenc}
@@ -79,7 +83,7 @@
 \newtheorem{conjecture}{Conjecture}
 \newtheorem{corollary}{Corollary}
 \newtheorem{criterion}{Criterion}
-\newtheorem{definition}{definition}
+\newtheorem{definition}{Definition}
 \newtheorem{example}{Example}
 \newtheorem{exercise}{Exercise}
 \newtheorem{lemma}{Lemma}
