--- a/main.tex
+++ b/main.tex
@@ -34,41 +34,41 @@
 \chapter{Limits and Continuity}
     \section{Informal definition of limits}
     \subfile{src/1-1-limit.tex}
-    \section{Formal definition of Limit}
-    \subfile{src/1-5-formal}
-    \section{One Sided Limits and Limits at Infinity}
-    \subfile{src/1-6-limit-variations}
-    \section{Properties of limits}
-    \subfile{src/1-2-properties-limits.tex}
-    \section{Continuity}
-    \subfile{src/1-4-continuity}
+%     \section{Formal definition of Limit}
+%     \subfile{src/1-5-formal}
+%     \section{One Sided Limits and Limits at Infinity}
+%     \subfile{src/1-6-limit-variations}
+%     \section{Properties of limits}
+%     \subfile{src/1-2-properties-limits.tex}
+%     \section{Continuity}
+%     \subfile{src/1-4-continuity}
 
 
-\chapter{Differentiation}
-    \section{Tangent Lines and Their Slopes}
-    \subfile{src/2-1-tangent}
-    \section{Derivative}
-    \subfile{src/2-2-derivative}
-    \section{Differentiation Rules}
-    \subfile{src/2-3-diffrules}
-    \section{Chain Rule}
-    \subfile{src/2-4-chain}
-    \section{Derivatives of Trigonometric Functions}
-    \subfile{src/2-5-trig}
-    \section{Higher Order Derivatives}
-    \subfile{src/2-6-higher}
-    \section{Mean Value Theorem}
-    \subfile{src/2-8-mean}
-    \section{Implicit Differentiation}
-    \subfile{src/2-9-implicit}
-    \section{Antiderivatives}
-    \subfile{src/2-10-antider}
+% \chapter{Differentiation}
+%     \section{Tangent Lines and Their Slopes}
+%     \subfile{src/2-1-tangent}
+%     \section{Derivative}
+%     \subfile{src/2-2-derivative}
+%     \section{Differentiation Rules}
+%     \subfile{src/2-3-diffrules}
+%     \section{Chain Rule}
+%     \subfile{src/2-4-chain}
+%     \section{Derivatives of Trigonometric Functions}
+%     \subfile{src/2-5-trig}
+%     \section{Higher Order Derivatives}
+%     \subfile{src/2-6-higher}
+%     \section{Mean Value Theorem}
+%     \subfile{src/2-8-mean}
+%     \section{Implicit Differentiation}
+%     \subfile{src/2-9-implicit}
+%     \section{Antiderivatives}
+%     \subfile{src/2-10-antider}
 
-\chapter{Transcendental Functions}
-    \section{Inverse Functions}
-    \subfile{src/3-1-inverse}
-    \section{Exponential and Logarithmic Functions}
-    \subfile{src/3-2-exp}
-    \section{The Natural Logarithm and Exponential}
-    \subfile{src/3-3-naturallog}
+% \chapter{Transcendental Functions}
+%     \section{Inverse Functions}
+%     \subfile{src/3-1-inverse}
+%     \section{Exponential and Logarithmic Functions}
+%     \subfile{src/3-2-exp}
+%     \section{The Natural Logarithm and Exponential}
+%     \subfile{src/3-3-naturallog}
 \end{document}
