--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,7 @@
 \usepackage{taylanmacros}
 \usepackage{fourier}
 \usepackage{multicol}
+\pgfplotsset{compat=1.12}
 \chapterstyle{bianchi}
 \usetikzlibrary{shapes.geometric,fit} % used in P-4-functions.tex
 
@@ -34,6 +35,8 @@
 \chapter{Limits and Continuity}
     \section{Informal definition of limits}
     \subfile{src/1-1-limit.tex}
+    \section{Limits at Infinity and Infinite Limits}
+    \subfile{1-3-infiniteLimits.tex}
 %     \section{Formal definition of Limit}
 %     \subfile{src/1-5-formal}
 %     \section{One Sided Limits and Limits at Infinity}
