--- a/src/1-1-limit.tex
+++ b/src/1-1-limit.tex
@@ -11,23 +11,36 @@ Both are based on the concept of limit.
 We say $\lim_{x \to a} f(x) = L$ to mean that $f(x)$ is ``close enough'' to $L$ when $x$ is ``close enough'' to \emph{but not equal to} $a$. Hence $f(a)$ is unimportant for $\lim_{x \to a} f(x)$.
 
 \begin{example}
-  $\lim_{x \to a} x = a$. $x$ is close enough to $a$ when $x$ is close enough to $a$.
+  Which value is $x$ close to when $x$ is close to 2? $\lim_{x \to 2} x = 2$.
 \end{example}
 
 \begin{example}
-  $\lim_{x \to a} c = c$ if $c$ is a constant.
+  Which value is 3 close to when $x$ is close to 2? $\lim_{x \to 2} 3 = 3$.
 \end{example}
+
+We can generalize these examples.
+\begin{theorem}
+\label{basic limit theorems}
+  Let $a$ and $c$ be two real numbers. Then
+  \[
+    \lim_{x \to a} c = c, \qquad
+    \lim_{x \to a} x = x.
+  \]
+\end{theorem}
+
 
 The limit $\lim_{x \to a} f(x)$ may be different from $f(a)$ as the next example shows.
 \begin{example}
   \[
-    g(x) =
+    f(x) =
     \begin{cases}
       x, &\text{ if } x\neq 2\\
       1, &\text{ if } x = 2\\
     \end{cases}
   \]
-  $\lim_{x \to 2} g(x) = \lim_{x \to 2} x = 2$ although $g(2) = 1$.
+  Which value is $f(x)$ close to when $x$ is close to (but not equal to) 2?
+
+  $\lim_{x \to 2} f(x) = \lim_{x \to 2} x = 2$ although $f(2) = 1$.
 \end{example}
 
 \subsection*{Informal definition of left and right limits}
@@ -69,35 +82,35 @@ Find the left and right limits of the signum function
 \end{example}
 
 
-\begin{example} Evaluate the expressions by referencing the plot in Figure~\ref{plot:piecewise-exercise}.
-\begin{figure}[H]
-  \centering
-  \input{figures/1-1-limitEx.tikz}
-  \label{plot:piecewise-exercise}
-\end{figure}
+% \begin{example} Evaluate the expressions by referencing the plot in Figure~\ref{plot:piecewise-exercise}.
+% \begin{figure}[H]
+%   \centering
+%   \input{figures/1-1-limitEx.tikz}
+%   \label{plot:piecewise-exercise}
+% \end{figure}
 
-\begin{enumerate}
-\begin{multicols}{3}
-\item $\lim_{x\to 4} f(x)$
-\item $\lim_{x\to -3} f(x)$
-\item $\lim_{x\to 0} f(x)$
-\item $\lim_{x\to 0-} f(x)$
-\item $\lim_{x\to 0+} f(x)$
-\item $f(-2)$
-\item $\lim_{x\to 2-} f(x)$
-\item $\lim_{x\to -2-} f(x)$
-\item $\lim_{x\to 0} f(x+1)$
-\item $f(0)$
-\item $\lim_{x\to 1-} f(x-4)$
-\item $\lim_{x\to 0+} f(x-2)$
-\end{multicols}
-\end{enumerate}
+% \begin{enumerate}
+% \begin{multicols}{3}
+% \item $\lim_{x\to 4} f(x)$
+% \item $\lim_{x\to -3} f(x)$
+% \item $\lim_{x\to 0} f(x)$
+% \item $\lim_{x\to 0-} f(x)$
+% \item $\lim_{x\to 0+} f(x)$
+% \item $f(-2)$
+% \item $\lim_{x\to 2-} f(x)$
+% \item $\lim_{x\to -2-} f(x)$
+% \item $\lim_{x\to 0} f(x+1)$
+% \item $f(0)$
+% \item $\lim_{x\to 1-} f(x-4)$
+% \item $\lim_{x\to 0+} f(x-2)$
+% \end{multicols}
+% \end{enumerate}
 
-(a) $8$, (b) $6$, (c) DNE,
-(d) $-2$, (e) $-1$, (f) $8$,
-(g) $7$, (h) $6$, (i) $3$,
-(j) $-3/2$, (k) $6$, (l) $2$
-\end{example}
+% (a) $8$, (b) $6$, (c) DNE,
+% (d) $-2$, (e) $-1$, (f) $8$,
+% (g) $7$, (h) $6$, (i) $3$,
+% (j) $-3/2$, (k) $6$, (l) $2$
+% \end{example}
 
 \subsection*{Properties of Limits}
 \begin{theorem}
@@ -120,7 +133,20 @@ Find the left and right limits of the signum function
 
 Using the above properties we can evaluate the following limits.
 \begin{example}
-  Find $\lim_{x \to 2} x^2 +1$ and $\lim_{x \to 2} \frac{x^2+1}{\sqrt{6-x}}$.
+  Find $\lim_{x \to 2} x^2 +1$ and $\lim_{x \to 2} \dfrac{x^2+1}{6-x}$.
+
+  Solution. Using the product rule of limits and the Theorem~\ref{basic limit theorems},
+  \[
+    \lim_{x \to 2} x^2 = \lim_{x \to 2} x \cdot \lim_{x \to 2} x = 2 \cdot 2 = 4
+  \]
+  Using the sum rule of limits,
+  \[
+    \lim_{x \to 2} x^2 + 1= \lim_{x \to 2} x^2 + \lim_{x \to 2} 1 = 4 + 1 = 5
+  \]
+  Using the division rule of limits,
+  \[
+    \lim_{x \to 2} \frac{x^2+1}{6-x} = \frac{\lim_{x \to 2} x^2+1}{\lim_{x \to 2} 6-x} = \frac{5}{4}.
+  \]
 \end{example}
 
 The above example is a special case of the following theorem.
@@ -150,6 +176,12 @@ The above example is a special case of the following theorem.
   If $2-x^2 \le g(x) \le 2 \cos x$ for $-1\le x \le 1$, find $\lim_{x \to 0}f(x)$.
 \end{example}
 
+\begin{example}
+  Show that if $\lim_{x \to a} \abs{f(x)} = 0$ then $\lim_{x \to a} f(x) = 0$.
+
+  Note that $-\abs{f(x)} \le f(x) \le \abs{f(x)}$ and use the Squeeze Theorem.
+\end{example}
+
 \subsection*{More examples}
 \begin{example}
   Let
@@ -164,8 +196,17 @@ In these example, we will compute $\lim_{x \to a} f(x)$ even when $f(a)$ does no
   Evaluate
   \begin{enumerate}
     \item $\lim_{x \to -2} \dfrac{x^2 + x-2}{x^2 + 5x +6}$,
+
+    \textit{Remember} that we consider $x$ values close to but not equal to $-2$. Hence $x+2 \neq 0$ and we can make the simplification
+    \[
+      \lim_{x \to -2} \dfrac{x^2 + x-2}{x^2 + 5x +6} =
+      \lim_{x \to -2} \dfrac{(x+2)(x-1)}{(x+2)(x+3)} =
+      \lim_{x \to -2} \dfrac{x-1}{x+3} = \frac{-3}{1} = -3.
+    \]
     \item $\lim_{x \to 5} \dfrac{\frac{1}{x} - \frac{1}{5}}{x-5}$,
-    \item $\lim_{x \to 4} \dfrac{\sqrt{x}-2}{x^2-16}$.
+    \item $\lim_{x \to 4} \dfrac{\sqrt{x}-2}{x^2-16}$,
+
+    \textit{Trick} is to multiply both sides by the conjugate expression.
     \item $\lim_{x \to -2} \dfrac{x^2 + 2x}{x^2-4}$,
     \item $\lim_{h \to 0} \dfrac{\sqrt{4+h}-2}{h}$,
     \item $\lim_{t \to 0} \dfrac{t}{\sqrt{4+t}-\sqrt{4-t}}$,
