--- a/taylanmacros.sty
+++ b/taylanmacros.sty
@@ -6,6 +6,7 @@
 \RequirePackage{amsmath}
 \RequirePackage{amsthm}
 \RequirePackage{amsfonts}
+\RequirePackage{subcaption}
 
 \RequirePackage{hyperref}
 
@@ -91,5 +92,5 @@
 \newtheorem{problem}{Problem}
 \newtheorem{proposition}{Proposition}
 \newtheorem{remark}{Remark}
-\newtheorem{solution}{Solution}
+\newtheorem*{solution}{Solution}
 \newtheorem{summary}{Summary}
