--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,7 @@
 \usepackage{taylanmacros}
 \usepackage{fourier}
 \usepackage{multicol}
+\usepackage{sidecap}
 \pgfplotsset{compat=1.12}
 \chapterstyle{bianchi}
 \usetikzlibrary{shapes.geometric,fit} % used in P-4-functions.tex
@@ -36,15 +37,17 @@
     \section{Informal definition of limits}
     \subfile{src/1-1-limit.tex}
     \section{Limits at Infinity and Infinite Limits}
-    \subfile{1-3-infiniteLimits.tex}
-%     \section{Formal definition of Limit}
-%     \subfile{src/1-5-formal}
+    \subfile{1-2-infiniteLimits.tex}
+    \section{Continuity}
+    \subfile{src/1-3-continuity.tex}
+    \section{Formal definition of Limit}
+    \subfile{src/1-4-formal.tex}
+    \section{Review Problems}
+    \subfile{src/1-5-limit-review.tex}
 %     \section{One Sided Limits and Limits at Infinity}
 %     \subfile{src/1-6-limit-variations}
 %     \section{Properties of limits}
 %     \subfile{src/1-2-properties-limits.tex}
-%     \section{Continuity}
-%     \subfile{src/1-4-continuity}
 
 
 % \chapter{Differentiation}
